--- a/al.html
+++ b/al.html
@@ -5,89 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style5.css">
     <title>Document</title>
 </head>
 
 <body>
-    <section class="Top-categories-of-the-month">
-        <div class="Top-categories-of-the-month-heading">
-            <h1>Top Categories Of The Month</h1>
-            <div>
-                <span class="catagories-arrow prv-catagories-arrow">❮</span>
-                <span class="catagories-arrow next-catagories-arrow">❯</span>
+    <div class="header1">
+        <div class="catagori-box">
+            <div class="cat-icon">
+                <div class="dot-and-line">
+                    <div id="circule"></div>
+                    <div id="line"></div>
+                </div>
+                <div class="dot-and-line">
+                    <div id="circule"></div>
+                    <div id="line"></div>
+                </div>
+                <div class="dot-and-line">
+                    <div id="circule"></div>
+                    <div id="line"></div>
+                </div>
+            </div>
+            <div class="cat-icon-details">
+                <span class="browser-catagorey">Browse Categories</span>
+                <i class="fa-solid fa-angle-right fa-rotate-90" style="color: #000000;"></i>
             </div>
         </div>
-        <div class="Top-categories-of-the-month-image-main-box">
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/amd_ryzen_3_3200g_3rd_gen_processor_4mb_cache_4.00ghz_tray_pack_1_.png" alt="">
-                <p>Processor</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/h525.png" alt="">
-                <p>Motherboard</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/MAGNET.png" alt="">
-                <p>PC Cabinet</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/Corsair-Dominator-Platinum-Rgb-32GB-2x16GB-Ddr5-Dram-7000MHz-C34-Desktop-Ram-1.webp" alt="">
-                <p>RAM</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/20201028111930.png" alt="">
-                <p>Graphics card</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/wd-green-ssd-240gb-left.png.thumb.1280.1280.png" alt="">
-                <p>SSD</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/500.png" alt="">
-                <p>CPU Cooler</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/K599.webp" alt="">
-                <p>Keyboard</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/basilisk-v3_500x500.png" alt="">
-                <p>Mouse</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/mh650-380x380-1-hover.png" alt="">
-                <p>Headset</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
-            <div class="Top-categories-of-the-month-image-box">
-                <img src="images/KCAS-Plus-Gold-750W-Infographics-01__77431.webp" alt="">
-                <p>Power Supply</p>
-                <p id="Show-Now_popup">SHOP NOW</p>
-                <div class="Show-Now_popup-line"></div>
-            </div>
+        <ul class="navber-ul">
+            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Home</a></li>
+            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Gaming Zone</a></li>
+            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Peripheral</a></li>
+            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Pre Built PC</a></li>
+            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Custom PC</a></li>
+        </ul>
+        <div class="searchbar">
+            <form>
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Search..">
+                <button type="submit" class="searchbar-btn">Search</button>
+            </form>
         </div>
-    </section>
-    <script src="sk.js"></script>
+    </div>
 </body>
 
 </html>
