--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
 
 <body>
     <div class="header1">
+        <div class="weblogo">
+            <img src="images/aorus-logo (1).png" alt="">
+        </div>
+        <div class="wish-compare-cart">
+            <div class="wish">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+            <div class="compare">
+                <i class="fa-solid fa-code-compare"></i>
+            </div>
+            <div class="cart">
+                <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+            <div class="user-profile">
+                <i class="fa-solid fa-user"></i>
+            </div>
+        </div>
+    </div>
+    <div class="header2">
         <div class="catagori-box">
             <div class="cat-icon">
                 <div class="dot-and-line">
@@ -33,12 +52,12 @@
             </div>
         </div>
         <ul class="navber-ul">
-            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Home<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
+            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Home</a></li>
             <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Gaming Zone<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
             <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Peripheral<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
             <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Pre Built PC<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
-            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Custom PC<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
-            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Explore<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
+            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Custom PC</a></li>
+            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Explore</a></li>
         </ul>
         <div class="searchbar">
             <form>
