--- a/index.html
+++ b/index.html
@@ -16,21 +16,25 @@
             <img src="images/aorus-logo (1).png" alt="">
         </div>
         <div class="wish-compare-cart">
-            <div class="wish">
+            <div class="wcc wish">
                 <i class="fa-solid fa-heart"></i>
             </div>
-            <div class="compare">
+            <div class="wcc compare">
                 <i class="fa-solid fa-code-compare"></i>
             </div>
-            <div class="cart">
+            <div class="wcc cart">
                 <i class="fa-solid fa-cart-shopping"></i>
             </div>
             <div class="user-profile">
-                <i class="fa-solid fa-user"></i>
+                <samp class="myaccount">My Account</samp>
+                <img src="images/profile.png" alt="">
             </div>
         </div>
     </div>
     <div class="header2">
+        <div class="mobview view-menu">
+            <i class="fa-solid fa-bars" style="color: #000000;"></i>
+        </div>
         <div class="catagori-box">
             <div class="cat-icon">
                 <div class="dot-and-line">
@@ -50,12 +54,49 @@
                 <span class="browser-catagorey">Browse Categories</span>
                 <i class="fa-solid fa-angle-right fa-rotate-90" style="color: #000000;"></i>
             </div>
+            <div class="categorey-box">
+                <a href=""><img src="images/cpu-150x150.png" alt="">&nbsp;Processor<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+                <a href=""><img src="images/motherboard-3-150x150.png" alt="">&nbsp;Mother board<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+                <a href=""><img src="images/cabinet-150x150.png" alt="">&nbsp;PC Cabinet<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+                <a href=""><img src="images/graphics-card-150x150.png" alt="">&nbsp;Graphics card<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+                <a href=""><img src="images/fan-150x150.png" alt="">&nbsp;CPU Cooler<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+                <a href=""><img src="images/ssd-drive-150x150.png" alt="">&nbsp;SSD<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+                <a href=""><img src="images/ram-3-150x150.png" alt="">&nbsp;RAM<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+                <a href=""><img src="images/power-supply-1-150x150.png" alt="">&nbsp;Power Supply<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+                <a href=""><img src="images/mouse-3-150x150.png" alt="">&nbsp;Mouse<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+                <a href=""><img src="images/keyboard-3-150x150.png" alt="">&nbsp;Keyboard<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+                <a href=""><img src="images/motherboard-3-150x150.png" alt="">&nbsp;Headset<i
+                        class="rarr fa right-arrow fa-angle-right" aria-hidden="true"></i></a>
+            </div>
         </div>
         <ul class="navber-ul">
             <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Home</a></li>
-            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Gaming Zone<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
-            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Peripheral<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
-            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Pre Built PC<i class="fa down-fa fa-angle-down" aria-hidden="true"></i></a></li>
+            <li class="navber-ul-li">
+                <div class="dropdown-content" style="left:0;">
+                    <a href="#">Gaming Monitor</a>
+                    <a href="#">Gaming Cabinat</a>
+                    <a href="#">Gaming Keyboard</a>
+                    <a href="#">Gaming Mouse</a>
+                    <a href="#">Gaming Headset</a>
+                    <a href="#">Gaming Mousepad</a>
+                </div>
+                <a class="navber-ul-li-a" href="">Gaming Zone<i class="fa down-fa fa-angle-down"
+                        aria-hidden="true"></i></a>
+            </li>
+            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Peripheral<i class="fa down-fa fa-angle-down"
+                        aria-hidden="true"></i></a></li>
+            <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Pre Built PC<i class="fa down-fa fa-angle-down"
+                        aria-hidden="true"></i></a></li>
             <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Custom PC</a></li>
             <li class="navber-ul-li"><a class="navber-ul-li-a" href="">Explore</a></li>
         </ul>
@@ -65,6 +106,9 @@
                 <input type="text" placeholder="Search..">
                 <button type="submit" class="searchbar-btn">Search</button>
             </form>
+        </div>
+        <div class="mobview view-user">
+            <i class="fa-solid fa-user" style="color: #000000;"></i>
         </div>
     </div>
 </body>
